<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SubwayEntranceSurvey" >

    <TextView
        android:id="@+id/textViewAttendant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/attendant_label" />

    <RadioGroup
        android:id="@+id/radioAttendant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/radioAttYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/radio_yes" />

        <RadioButton
            android:id="@+id/radioAttNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="false"
            android:text="@string/radio_no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewTurnstile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/turnstile" />

    <RadioGroup
        android:id="@+id/radioTurnstile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/radioTurnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="false"
            android:text="@string/radio_yes" />

        <RadioButton
            android:id="@+id/radioTurnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/radio_no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewTokMac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/token_machine" />

    <RadioGroup
        android:id="@+id/radioTokMac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/radioTokYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="false"
            android:text="@string/radio_yes" />

        <RadioButton
            android:id="@+id/radioTokNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/radio_no" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="onClickSubmitButton"
        android:text="@string/submit" />

</LinearLayout>